Java 18 working and publishing to NewRelic