@@ -18,7 +18,13 @@
 ARG JAVA_VERSION=18
 ARG JAVA_REVISION=18.0.2
 
-FROM public.ecr.aws/amazoncorretto/amazoncorretto:${JAVA_REVISION}-al2
+FROM public.ecr.aws/amazoncorretto/amazoncorretto:${JAVA_VERSION}-amd64
+
+RUN yum install -y wget unzip
+
+RUN curl -o /tmp/newrelic.zip https://download.newrelic.com/newrelic/java-agent/newrelic-agent/current/newrelic-java.zip
+RUN unzip /tmp/newrelic.zip -d /opt/
+ADD ./newrelic.yml /opt/newrelic/newrelic.yml
 
 COPY target/dependencies/* /var/runtime/lib/
 
@@ -26,7 +32,9 @@ ENV LANG=en_US.UTF-8
 ENV TZ=:/etc/localtime
 ENV PATH=/opt/java/openjdk/bin:/usr/local/bin:/usr/bin:/bin:/opt/bin
 ENV LD_LIBRARY_PATH=/lib:/usr/lib:/var/runtime:/var/runtime/lib:/var/task:/var/task/lib:/opt/lib
-ENV LAMBDA_TASK_ROOT=/var/task
-ENV LAMBDA_RUNTIME_DIR=/var/runtime
+ENV LAMBDA_TASK_ROOT=/var/task/
+ENV LAMBDA_RUNTIME_DIR=/var/runtime/
+ENV MAIN_CLASS="com.amazonaws.services.lambda.runtime.api.client.AWSLambda"
 
-ENTRYPOINT [ "/usr/bin/java", "--class-path", "/var/runtime/lib/*:/var/task/lib/*:/var/task/", "--add-opens", "java.base/java.util=ALL-UNNAMED", "com.amazonaws.services.lambda.runtime.api.client.AWSLambda" ]
+ADD entrypoint.sh /var/task/
+ENTRYPOINT /var/task/entrypoint.sh
